--- a/brick-breaker-game/index.html
+++ b/brick-breaker-game/index.html
@@ -10,6 +10,6 @@
   <body>
     <canvas id="gameScreen" width="800" height="600"> </canvas>
 
-    <script src="src/index.js"></script>
+    <script src="src/index.js" type="module"></script>
   </body>
 </html>
