--- a/brick-breaker-game/index.html
+++ b/brick-breaker-game/index.html
@@ -8,6 +8,7 @@
     <title>Brick-breaker Game</title>
   </head>
   <body>
+    <img id="image__ball" src="assets/images/ball.svg" alt="ball" />
     <canvas id="gameScreen" width="800" height="600"> </canvas>
 
     <script src="src/index.js" type="module"></script>
