--- a/chris-course-canvas/8.sine-waves/src/index.html
+++ b/chris-course-canvas/8.sine-waves/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Gravity | Chris Courses</title>
+    <title>Sine Waves | Chris Courses</title>
     <style>
       body {
         margin: 0;
