Tron-Like Particle Tunnels

--- a/chris-course-canvas/12.tunnels/src/index.html
+++ b/chris-course-canvas/12.tunnels/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Realistic Canvas Fireworks | Chris Courses</title>
+    <title>Tron-Like Particle Tunnels | Chris Courses</title>
     <style>
       body {
         margin: 0;
